# Curriculum-vitae

./: .gitignore  LICENSE.md  README.md
credit_scoring/: .gitignore  .gitlab-ci.yml  README.md  cls  dvc.yaml  pyproject.toml  setup.cfg
credit_scoring/.dvc/: config
credit_scoring/data/: .gitignore  HomeCredit_columns_description.csv.dvc  POS_CASH_balance.csv.dvc  POS_CASH_balance_plus_bureau-001.log.dvc  application_test.csv.dvc  application_train.csv.dvc  bureau.csv.dvc  bureau_balance.csv.dvc  credit_card_balance.csv.dvc  features_application_train.csv.dvc  installments_payments.csv.dvc  previous_application.csv.dvc  sample_submission.csv.dvc
credit_scoring/notebooks/: README.md  SQL_HW.ipynb  antifraud.ipynb  antifraud.md
credit_scoring/src/app/antifraud/: README.md
credit_scoring/src/app/core/: README.md  README_HW9.md  api.py  calculator.py  catboost_model.pkl  model.py  notebook.ipynb
credit_scoring/src/app/modelling/: README.md  README_hw6.md  README_hw7.md  hw7_blending.py  hw7_catboost.py  hw7_random_forest.py  hw7_stacking.py  hw_6_decision_tree.pkl  hw_6_decision_tree.py  hw_6_logistic_regression.py  hw_6_regression_model.pkl  hw_7_meta_model_blending.pkl  hw_7_meta_model_stacking.pkl  hw_7_random_forest.pkl
credit_scoring/src/app/scoring/: README.md
credit_scoring/src/config/: README.md  config_file.py
credit_scoring/src/hw5/: application_train.py  bureau.py  bureau_balance.py  credit_card_balance.py  installments_payments.py  previous_application.py
credit_scoring/src/hw_31/: README.md  hw31.py
credit_scoring/src/hw_32/: hw_32.ipynb
(+54 files in other folders)
